--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -13,8 +13,34 @@ em { font-style: italic; }
 strong { font-weight: bold; }
 
 body {
-  background: $color-darkcyan;
+  background: $color-white;
   font-size: 16px;
+}
+
+.category-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.note-post:nth-child(odd) {
+  background-color: $color-darkgrey;
+}
+
+.category{
+  margin: 2%;
+  padding: 1%;
+  width: 220px;
+  height: 268px;
+  background-color: cornflowerblue;
+  border-radius: 30px;
+  align-content: center;
+}
+
+h3{
+  padding-bottom: 1%;
+  padding-left: 2%;
+  color: #fff;
 }
 
 #root {
@@ -32,7 +58,6 @@ blockquote {
   }
 }
 
-
 // form
 label {
   font-size: 1.25em;
@@ -41,7 +66,7 @@ label {
 }
 
 textarea, input {
-  background: $color-white;
+  background: $color-darkgrey;
   border: none;
   padding: 15px;
   border-radius: 3px;
